--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -45,23 +45,24 @@ h4 {
 h1 {
     font-weight: bold;
     font-size: 25px;
-    line-height: 0.85;
+    line-height: .85;
 }
 
 h2 {
     font-size: 20px;
     font-weight: bold;
-    line-height: 0.85;
+    line-height: .85;
 }
+
 h3 {
     font-size: 16px;
     font-weight: bold;
 }
 
 p, 
-li {
+ol li {
     font-size: 14px;
-    line-height: 23px;
+    line-height: 25px;
     margin: 0 0 5px;
 }
 
