--- a/resources/css/projectgrid.css
+++ b/resources/css/projectgrid.css
@@ -60,6 +60,7 @@ h2 {
     line-height: 0.85;
     padding: 15px 5px 15px 5px;
 }
+
 h3 {
     font-size: 16px;
     font-weight: bold;
@@ -71,6 +72,7 @@ li {
     font-size: 14px;
     line-height: 23px;
     margin: 0 0 5px;
+    padding-right: 20px;
 }
 /* 3. Structure Styles ============== */
 section {
